Bug 1689641 - Work around a potential clang-12 miscompilation in CacheRegisterAllocator::allocateValueRegister r=jandem

Some time ago a change landed in clang trunk that resulted in `reg1` and `reg2` not getting saved to the right places on the (caller's, since this was inlined) stack. At the time I ran a bisect to find the specific change in LLVM and talked to the developer, but we couldn't find anything wrong with that change itself. It is likely that the change only exposed pre-existing problems, which I never managed to track down. But preventing inline on `allocateValueRegister` has consistently prevented the problem.

We only need this on win32 under clang-12, so I'm open to further scoping down the ifdefs if requested.

Differential Revision: https://phabricator.services.mozilla.com/D103488